maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:17: error: expected class or object definition
def chercherBiscuit(){
^JediEscaper:28: error: expected class or object definition
def aMurSud(x:Int,y:Int):Boolean={
^JediEscaper:37: error: expected class or object definition
def aMurEst(x:Int,y:Int):Boolean={
^JediEscaper:46: error: expected class or object definition
def ecrire(x:Int,y:Int){
^JediEscaper:61: error: expected class or object definition
def caseLibre(x,y):Boolean={
^JediEscaper:77: error: expected class or object definition
def testvaleur(x,y,valeur:Int):Boolean={
^JediEscaper:82: error: expected class or object definition
def scan(valeur:Int){
^JediEscaper:97: error: Unmatched closing brace '}' ignored here
}
^